# qide

./: .gitignore  .gitmodules  BUILD.gn  ProjectHome.md  qide.config  qide.files  qide.includes
src/: BUILD.gn  main.cc
src/base/: alias.h  path.h
src/index/: BUILD.gn  clang_parser.cc  clang_parser.h  color_scheme.cc  color_scheme.h
src/project/: BUILD.gn  base_project.h  clang_index.cc  clang_index.h  compdb_project.cc  compdb_project.h  file_iterator.h  ninja_project.cc  ninja_project.h  project.pb.cc  project.pb.h  project.proto  proto_project.cc  proto_project.h  simple_project.cc  simple_project.h
src/ui/: BUILD.gn  code_editor.cc  code_editor.h  file_item.cc  file_item.h  file_tree_item.cc  file_tree_item.h  folder_item.cc  folder_item.h  folder_tree_item.cc  folder_tree_item.h  line_number_area.cc  line_number_area.h  main_window.cc  main_window.h  main_window.ui  project_tree.cc  project_tree.h
