import("//build/template/pkg_config.gni")

pkg_config("protobuf") {
  packages = [ "protobuf" ]
}

shared_library("project") {
  sources = [
    "ninja_project.cc",
    "ninja_project.h",
    "project.pb.cc",
    "project.pb.h",
    "project.proto",
  ]

  configs += [ ":protobuf" ]
  deps = [
    "//src/third_party/ninja:ninja",
  ]

  libs = [ "clang" ]
}
