import("//build/template/protobuf.gni")

protobuf("project_proto") {
  sources = [
    "project.proto",
  ]
}

shared_library("project") {
  sources = [
    "base_project.h",
    "compdb_project.cc",
    "compdb_project.h",
    "ninja_project.cc",
    "ninja_project.h",
    "proto_project.cc",
    "proto_project.h",
  ]

  deps = [
    ":project_proto",
  ]

  configs += [ "//build/config:llvm" ]

  libs = [ "clang" ]
}
